# householder

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: addition.rs  base_matrix.rs  base_matrix_mut.rs  base_types.rs  data_container.rs  examples.rs  global.rs  iterators.rs  layouts.rs  lib.rs  macros.rs  matrix.rs  matrix_impl.rs  matrix_multiply.rs  matrix_mut.rs  matrix_operators.rs  matrix_ref.rs  matrix_traits.rs  scalar_mult.rs  slice_matrix.rs  tools.rs  traits.rs  types.rs  vector.rs
src/layouts/: arbitrary_stride_column_major.rs  arbitrary_stride_column_vector.rs  arbitrary_stride_row_major.rs  arbitrary_stride_row_vector.rs  column_major.rs  column_vector.rs  row_major.rs  row_vector.rs  upper_triangular.rs
src/matrix/: base_methods.rs  common_impl.rs  constructors.rs  matrix_slices.rs  random.rs  vector_impl.rs
src/traits/: dimensions.rs  layout.rs  matrix.rs  random_access.rs  size.rs
